--- a/package.json
+++ b/package.json
@@ -2,16 +2,23 @@
   "name": "bookshop-spa",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^6.8.0"
+    "@types/react": "^16.9.20",
+    "@types/react-dom": "^16.9.5",
+    "eslint": "^6.8.0",
+    "source-map-loader": "^0.2.4",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.7.5",
+    "webpack": "^4.41.6",
+    "webpack-cli": "^3.3.11"
   },
   "dependencies": {
-    "typescript": "^3.7.5"
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   }
 }
