--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,11 @@
 {
     "compilerOptions": {
         "outDir": "./built",
-        "allowJs": true,
-        "target": "es6"
+        "sourceMap": true,
+        "noImplicitAny": true,
+        "allowJs": false,
+        "target": "es6",
+        "jsx": "react"
     },
     "include": [
         "./src/**/*"
