--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
     "compilerOptions": {
-        "outDir": "./built",
+        "outDir": "./dist/",
         "sourceMap": true,
         "noImplicitAny": true,
-        "allowJs": false,
         "target": "es6",
-        "jsx": "react"
+        "jsx": "react",
+        "module": "commonjs",
     },
     "include": [
         "./src/**/*"
